# so101-nexus

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MJLAB-FEASIBILITY.md  Makefile  PLAN.md  README.md  REVIEW.md  SECURITY.md  SOLID_DRY_AUDIT_README.md  pyproject.toml  pyrightconfig.json  test_envs.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: protect_main_branch.sh  pypi_smoke_check.py
.github/workflows/: ci.yml  dependency-review.yml  deploy-docs.yml  publish.yml  release-smoke.yml
docs/: next.config.mjs  package.json  pnpm-lock.yaml
docs/app/: layout.tsx
docs/app/api/search/: route.ts
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: assets-and-geometry.mdx  configs.mdx  core-overview.mdx  environment-registry.mdx  lerobot-processors.mdx  meta.json  objects.mdx
docs/content/docs/concepts/: backend-support.mdx  lerobot-compatibility.mdx  meta.json  observations-and-camera-modes.mdx  poses.mdx  tasks-and-success-conditions.mdx
docs/content/docs/environments/: index.mdx  maniskill-look-at-so100.mdx  maniskill-look-at-so101.mdx  maniskill-move-so100.mdx  maniskill-move-so101.mdx  maniskill-pick-and-place-so100.mdx  maniskill-pick-and-place-so101.mdx  maniskill-pick-lift-so100.mdx  maniskill-pick-lift-so101.mdx  maniskill-reach-so100.mdx  maniskill-reach-so101.mdx  meta.json  mujoco-look-at.mdx  mujoco-move.mdx  mujoco-pick-and-place.mdx  mujoco-pick-lift.mdx  mujoco-reach.mdx  mujoco-stack-cube.mdx  mujoco-touch.mdx
docs/content/docs/getting-started/: environment-ids.mdx  installation.mdx  meta.json  overview.mdx  quickstart-maniskill.mdx  quickstart-mujoco.mdx  stability.mdx
docs/plans/: 2026-03-05-config-absorb-params.md  2026-03-06-color-randomization-design.md  2026-03-06-color-randomization.md  2026-03-09-teleop-improvements-design.md  2026-03-09-teleop-improvements.md  2026-05-03-teleop-friction-design.md  2026-05-03-teleop-friction.md  2026-05-17-fix-docs-search.md
docs/superpowers/plans/: 2026-03-20-obs-state-envs.md
docs/superpowers/specs/: 2026-03-16-teleop-ui-improvements-design.md  2026-06-14-sim-drift-housekeeping-design.md
examples/: README.md  __init__.py  bc_ppo_warp.py  bc_ppo_warp_colab.ipynb  eval_warp.py  list_envs.py  ppo.py  ppo_warp.py  ppo_warp_colab.ipynb  teleop.py
scripts/: setup-rocm.sh  smoke_molmoact_rollout.py
skills/reward-engineering/: SKILL.md
so101_nexus/maniskill/: __init__.py  pick_cube.py  so101_agent.py
src/so101_nexus/: __init__.py  _reproducibility.py  camera_utils.py  cli.py  config.py  constants.py  env_ids.py  lerobot_dataset.py  object_slots.py  objects.py  observations.py  rewards.py  scene.py  visualization.py  ycb_assets.py  ycb_geometry.py
src/so101_nexus/lerobot_adapter/: __init__.py  normalization.py  sim_camera.py  sim_camera_config.py  sim_follower.py  sim_follower_config.py  synthetic_calibration.py
src/so101_nexus/mujoco/: __init__.py  base_env.py  look_at_env.py  move_env.py  pick_and_place.py  pick_env.py  reach_env.py  spawn_utils.py  stack_cube.py  touch_env.py
src/so101_nexus/policy_adapters/: __init__.py  chunked_policy.py  molmoact.py  recorder.py
src/so101_nexus/processors/: __init__.py  action.py  lerobot_env_wrapper.py  pipelines.py
src/so101_nexus/teleop/: __init__.py  __main__.py  app.py  cli.py  config_customization.py  dataset.py  leader.py  recorder.py  session.py
src/so101_nexus/testing/: __init__.py  cli_contract.py  contract.py  env_id_filter.py  invariants.py
src/so101_nexus/warp/: __init__.py  base_env.py  look_at_env.py  move_env.py  object_slots.py  pick_and_place.py  pick_env.py  reach_env.py  render.py  stack_cube.py  touch_env.py
tests/: conftest.py  test_docs_consistency.py  test_release_smoke_workflow.py  test_rocm_extra.py  test_teleop_camera_config.py
tests/core/: test_assets.py  test_camera_utils.py  test_camera_utils_properties.py  test_config.py  test_contract.py  test_env_ids.py  test_lerobot_adapter_camera.py  test_lerobot_adapter_follower.py  test_lerobot_adapter_mujoco.py  test_lerobot_adapter_normalization.py  test_lerobot_adapter_record_loop.py  test_lerobot_adapter_registration.py  test_lerobot_adapter_synthetic_calibration.py  test_lerobot_dataset.py  test_lerobot_env_wrapper.py  test_molmoact_policy.py  test_object_slots.py  test_objects.py  test_observations.py  test_processors_action.py  test_processors_observation.py  test_processors_pipelines.py  test_rewards.py  test_rewards_properties.py  test_rewards_tensor.py  test_rollout_recorder.py  test_rollout_recorder_dataset.py  test_scene.py  test_source_guardrails.py  test_teleop_app_helpers.py  test_teleop_cli.py  test_teleop_config_customization.py  test_teleop_dataset.py  test_teleop_dataset_compat.py  test_teleop_leader.py  test_teleop_recorder.py  test_teleop_session.py  test_teleop_ui.py  test_visualization.py  test_warp_registration.py  (+2 more)
tests/mujoco/: test_base_env_init_qpos.py  test_cli.py  test_determinism_goldens.py  test_env_ids_filter.py  test_env_invariants.py  test_envs.py  test_menagerie_model.py  test_obs_mode_config.py  test_pick_and_place_config.py  test_render_camera.py  test_reward_penalties.py  test_rollout_video.py  test_spawn_utils.py  test_stack_cube_config.py  test_stack_cube_envs.py  test_teleop_env_kwargs.py
tests/mujoco/data/: determinism_goldens.npz
tests/test_maniskill/: test_pick_cube.py
tests/visual/: conftest.py  test_maniskill_visual.py  test_mujoco_visual.py
tests/warp/: conftest.py  test_bc_ppo_warp_smoke.py  test_package.py  test_ppo_warp_smoke.py  test_stack_cube_envs.py  test_warp_camera.py  test_warp_cross_backend_camera.py  test_warp_cross_backend_reward.py  test_warp_envs.py  test_warp_helpers.py  test_warp_heterogeneous.py  test_warp_make_vec.py  test_warp_reach.py  test_warp_reset_contract.py  test_warp_touch.py
utils/: visualize_env.py  visualize_env_maniskill.py
videos/: trajectory.h5  trajectory.json
(+22 files in other folders)
