[project]
name = "so101-nexus-workspace"
version = "0.3.1"
description = "Workspace root for SO101-Nexus simulation environments"
requires-python = ">=3.12"
dependencies = [
    "tensorboard>=2.0.0",
    "wandb[media]>=0.16.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
conflicts = [
    [
        { package = "so101-nexus-maniskill" },
        { package = "so101-nexus-mujoco" },
    ],
    [
        { package = "so101-nexus-maniskill" },
        { package = "so101-nexus-workspace", group = "teleop" },
    ],
    [
        { package = "so101-nexus-maniskill" },
        { package = "so101-nexus-mujoco", group = "teleop" },
    ],
]

[dependency-groups]
dev = ["hypothesis>=6.140.0", "pytest-cov>=7.0.0", "ruff", "ty"]
visual = ["litellm", "Pillow", "imageio[ffmpeg]"]
teleop = ["lerobot[feetech]>=0.5.0", "gradio>=5.0.0", "plotly>=6.0.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "D",
    "ERA",
    "PLR",
    "PLW",
    "PLC",
    "PGH004",
    "C4",
    "C90",
    "SIM",
    "RUF",
    "UP",
    "B",
    "PIE",
    "PT",
    "RET",
    "TCH",
]
ignore = [
    "F403",
    "F405",
    "PLR0913",
    "PLR2004",
    "PLC0415",
    "RUF012",
    "RUF059",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "PT006"]
".github/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 10
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["so101_nexus_core", "so101_nexus_maniskill", "so101_nexus_mujoco"]

[tool.ty.analysis]
replace-imports-with-any = ["mujoco", "mujoco.**"]

[tool.ty.src]
exclude = ["**/tests/**"]

[tool.coverage.run]
source = ["."]
omit = [
    "**/__init__.py",
    "**/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra"]
testpaths = [
    "packages/so101-nexus-core/tests",
    "packages/so101-nexus-maniskill/tests",
    "packages/so101-nexus-mujoco/tests",
    "tests",
]
markers = [
    "visual: LLM-powered visual verification tests (require ANTHROPIC_API_KEY or VISUAL_TEST_MODEL)",
]