[project]
name = "so101-nexus-workspace"
version = "0.3.4"
description = "Workspace root for SO101-Nexus simulation environments"
requires-python = ">=3.12"
dependencies = [
    "tensorboard>=2.0.0",
    "wandb[media]>=0.16.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
conflicts = [
    [
        { package = "so101-nexus-maniskill" },
        { package = "so101-nexus-mujoco" },
    ],
]

# Pin mani-skill to a specific main-branch commit until they cut a release
# that supports gymnasium>=1.1.1. This is what unblocks running teleop
# (lerobot[feetech]>=0.5.0 needs gymnasium>=1.1.1) alongside the ManiSkill
# backend in a single environment. Drop this override once mani-skill ships
# the next stable release.
[tool.uv.sources]
mani-skill = { git = "https://github.com/haosulab/ManiSkill.git", rev = "81d3a4320babadc0add4e6f9ee61050d0903576a" }

[dependency-groups]
dev = ["hypothesis>=6.140.0", "pytest-cov>=7.0.0", "ruff", "ty"]
visual = ["litellm", "Pillow", "imageio[ffmpeg]"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "D",
    "ERA",
    "PLR",
    "PLW",
    "PLC",
    "PGH004",
    "C4",
    "C90",
    "SIM",
    "RUF",
    "UP",
    "B",
    "PIE",
    "PT",
    "RET",
    "TCH",
]
ignore = [
    "F403",
    "F405",
    "PLR0913",
    "PLR2004",
    "PLC0415",
    "RUF012",
    "RUF059",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "PT006"]
".github/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 10
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["so101_nexus_core", "so101_nexus_maniskill", "so101_nexus_mujoco"]

[tool.ty.analysis]
replace-imports-with-any = ["mujoco", "mujoco.**"]

[tool.ty.src]
exclude = ["**/tests/**"]

[tool.coverage.run]
source = ["."]
parallel = true
concurrency = ["thread"]
data_file = ".coverage"
omit = [
    "**/__init__.py",
    "**/tests/*",
    "**/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra"]
testpaths = [
    "packages/so101-nexus-core/tests",
    "packages/so101-nexus-maniskill/tests",
    "packages/so101-nexus-mujoco/tests",
    "tests",
]
markers = [
    "visual: LLM-powered visual verification tests (require ANTHROPIC_API_KEY or VISUAL_TEST_MODEL)",
]

[tool.coverage.paths]
source = [
    "packages/so101-nexus-core/src",
    "packages/so101-nexus-mujoco/src",
    "packages/so101-nexus-maniskill/src",
    "**/site-packages",
]