[project]
name = "so101-nexus"
version = "0.4.0"
description = "MuJoCo simulation environments for the SO-101 robot arm, built for imitation learning and teleoperation with LeRobot"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "huggingface_hub",
    "trimesh",
    "scipy",
    "mujoco>=3.1.3",
    "gymnasium>=1.0.0",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
viz = ["Pillow"]
teleop = [
    "lerobot[feetech]>=0.5.0,<0.6",
    "gradio>=5.0.0",
    "plotly>=6.0.0",
    "opencv-python>=4.8.0",
    "Pillow",
]
molmoact = [
    "transformers>=5.8",
    "huggingface-hub",
    "Pillow",
    "accelerate",
]
train = [
    "tensorboard>=2.0.0",
    "wandb[media]>=0.16.0",
]
warp = [
    "mujoco-warp>=3.9.0.1,<3.10",
    "torch",
]

[project.scripts]
so101-nexus = "so101_nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/so101_nexus"]
exclude = ["src/so101_nexus/assets/**/*"]

[tool.hatch.build.targets.wheel.force-include]
"src/so101_nexus/assets/SO101" = "so101_nexus/assets/SO101"
"src/so101_nexus/assets/SO101_menagerie" = "so101_nexus/assets/SO101_menagerie"

[dependency-groups]
dev = [{ include-group = "test" }, "ruff", "ty"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.140.0",
    "imageio[ffmpeg]",
    "Pillow",
    "lerobot[feetech]>=0.5.0,<0.6",
]
visual = ["litellm", "Pillow", "imageio[ffmpeg]"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "D",
    "ERA",
    "PLR",
    "PLW",
    "PLC",
    "PGH004",
    "C4",
    "C90",
    "SIM",
    "RUF",
    "UP",
    "B",
    "PIE",
    "PT",
    "RET",
    "TCH",
]
ignore = [
    "F403",
    "F405",
    "PLR0913",
    "PLR2004",
    "PLC0415",
    "RUF012",
    "RUF059",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D", "PT006"]
".github/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 10
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["so101_nexus"]

[tool.ty.analysis]
replace-imports-with-any = [
    "cv2",
    "gradio",
    "gradio.**",
    "hatchling.metadata.plugin.interface",
    "mujoco",
    "mujoco.**",
    "mujoco_warp",
    "mujoco_warp.**",
    "plotly",
    "plotly.**",
    "transforms3d",
    "transforms3d.**",
    "tyro",
    "warp",
    "warp.**",
]

[tool.ty.environment]
extra-paths = ["src"]

[tool.ty.src]
exclude = ["**/tests/**"]

[tool.coverage.run]
source = ["so101_nexus"]
omit = [
    "**/__init__.py",
    "**/tests/*",
    "**/cli.py",
    "**/warp/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.paths]
package = [
    "src/so101_nexus",
    "**/site-packages/so101_nexus",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra"]
testpaths = ["tests"]
markers = [
    "slow: slower integration tests",
    "visual: LLM-powered visual verification tests (require ANTHROPIC_API_KEY or VISUAL_TEST_MODEL)",
    "warp: GPU/Warp backend tests (require mujoco_warp; run on the Warp CPU device)",
]
